them separately on CPAN. Modules considered obsolute (relies on a dead web
service or utilizes strict dependencies that are also considered obsolete) will
be removed.

1.7.3 - "To Be Named"

    * The following modules have been moved here from the BioPerl-Run
      distribution:

          Bio::Tools::Run::Analysis
          Bio::Tools::Run::AnalysisFactory
          Bio::Tools::Run::WrapperBase
          Bio::Tools::Run::WrapperBase::CommandExts

    * The following modules have been removed from the BioPerl
      distribution to be part of a separate distribution also
      on CPAN:

          Bio::AlignIO::stockholm
          Bio::DB::Expression
          Bio::DB::Expression::geo
          Bio::Index::Stockholm
          Bio::SearchDist
          Bio::Tools::AlignFactory
          Bio::Tools::Phylo::Gumby
          Bio::Tools::dpAlign
          Bio::Tools::pSW

    * The following programs have been removed:

          bp_netinstall
          bp_process_wormbase

    [Code changes]

    * The deobfuscator has been removed.

    * The script `bp_blast2tree` has been moved to the BioPerl-Run
      distribution since it's mainly a wrapper to modules in there.

    * The entire Bio::PopGen namespace, Bio::Tree::AlleleNode
      module, and scripts bp_composite_LD and bp_heterogeneity_test
      have been moved into a separate distribution named Bio-PopGen.

    * All modules related to the NeXML format have been moved into a
      separate distribution named Bio-NeXMLIO.  These are:

          * Bio::AlignIO::nexml
          * Bio::Nexml::Factory
          * Bio::NexmlIO
          * Bio::SeqIO::nexml
          * Bio::TreeIO::nexml

      This also means BioPerl is no longer dependent on Bio-Phylo.

    * All modules interfacing to ACeDB servers have been moved into a
      separate distribution named Bio-DB-Ace.  These are:

          * Bio::DB::Ace
          * Bio::DB::GFF::Adaptor::ace
          * Bio::DB::GFF::Adaptor::dbi::mysqlace