@@ -38,6 +38,7 @@ be removed.
 
           Bio::Tools::Run::Analysis
           Bio::Tools::Run::AnalysisFactory
+          Bio::Tools::Run::Phylo::PhyloBase
           Bio::Tools::Run::WrapperBase
           Bio::Tools::Run::WrapperBase::CommandExts
 
